--- a/environment.yml
+++ b/environment.yml
@@ -64,6 +64,7 @@ dependencies:
   - pip:
     - absl-py==0.13.0
     - backcall==0.2.0
+    - jupyterlab==4.3.4
     - cachetools==4.2.2
     - charset-normalizer==2.0.4
     - chumpy==0.70
